Changed to topic-wise news
- Added pagination
- Updated cards UI

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -10,7 +10,7 @@
 	z-index: 50;
 }
 
-.header h1 {
+.header span {
 	float: left;
 	margin: 0;
 	padding: 0 15px;
@@ -18,6 +18,11 @@
 	line-height: 56px;
 	font-weight: 400;
 	color: #FFF;
+}
+
+.header span a {
+	text-decoration: none;
+  color: white;
 }
 
 .header nav {
