--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
 .newsItem{
   min-width: 350px;
-  width: 30%;
 	height: 400px;
 	background: #fff;
 	margin: 10px;
@@ -13,6 +10,7 @@
   background-position: center;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
   transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  flex: 1;
 }
 .newsImg{
 	/* margin: -10px -10px 10px -10px; */
@@ -20,15 +18,15 @@
 	width: 100%;
 }
 .newsTitle{
-  font-size: 1.5em;
-  font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+  font-size: 1.8em;
+  font-family: Roboto,sans-serif;
 }
 .newsContent{
   padding: 10px;
   height: 100%;
   text-overflow: ellipsis;
   color: #fff; 
-  background: rgb(0,0,0,0.3);
+  background: rgb(0,0,0,0.4);
   display: flex;
   align-items: flex-end;
 }
