--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,18 +1,19 @@
 .home {
-	padding: 56px 20px;
-	min-height: 100%;
-	width: 100%;
-	background: #f2f2f2;
-}
-.homeSelect{
-	height: 30px;
-	font-size: 16px;
-	margin: 10px;
-	padding: 5px;
+	padding: 56px 0px;
 }
 .newsContainer{
-	/* margin: 0 -10px; */
+	display: flex;
+	width: 100vw;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 .wd50{
 	width: 50%;
+}
+.loadingCnt{
+	width: 100%;
+	text-align: center;
+}
+.loadingCnt img{
+	width: 50vh;
 }
