--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,3 +20,31 @@ html, body {
 	overflow: auto;
 	background: #f2f2f2;
 }
+
+.btn {
+	position: relative;
+	display: inline-block;
+	padding: 6px 12px;
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 20px;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-repeat: repeat-x;
+	background-position: -1px -1px;
+	background-size: 110% 110%;
+	border: 1px solid rgba(27,31,35,0.2);
+	border-radius: 0.25em;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	color: #24292e;
+	background-color: #eff3f6;
+	background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%);
+	text-decoration: none;
+}
