--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -6,6 +6,8 @@
 	width: 100vw;
 	flex-direction: row;
 	flex-wrap: wrap;
+	overflow-y: auto;
+  height: 100%;
 }
 .wd50{
 	width: 50%;
@@ -16,4 +18,11 @@
 }
 .loadingCnt img{
 	width: 50vh;
+}
+
+@media screen and (max-width: 768px) {
+	.newsContainer{
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
+	}
 }
