--- a/src/routes/settings/style.css
+++ b/src/routes/settings/style.css
@@ -1,4 +1,5 @@
 .settings {
+	position: relative;
 	padding: 65px 20px 20px 20px;
 	min-height: 100%;
 	width: 100%;
@@ -19,13 +20,16 @@
 	padding: 5px;
 }
 
+.formActions{
+	margin: 10px 0;
+}
+
 .footer{
 	position: absolute;
 	bottom: 20px;
-	width: 100%;
+	width: calc(100% - 40px);
   text-align: center;
 	font-size: 14px;
-	padding-top: 20px;
 }
 
 .footer a {
@@ -35,5 +39,9 @@
 @media only screen and (max-width: 420px){
 	.homeSelect{
 		width: 100%;
+	}
+	.formActions{
+		text-align: center;
+		margin-bottom: 40px;
 	}
 }
