--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -26,7 +26,7 @@
   height: 100%;
   text-overflow: ellipsis;
   color: #fff; 
-  background: rgb(0,0,0,0.5);
+  background: rgba(0,0,0,0.5);
   display: flex;
   align-items: flex-end;
 }
