--- a/src/style/index.css
+++ b/src/style/index.css
@@ -48,9 +48,12 @@ html, body {
 	text-decoration: none;
 }
 
-/* CSS specific to iOS devices */ 
-@supports (-webkit-overflow-scrolling: touch) {
-	-webkit-touch-callout: none;
-	-webkit-tap-highlight-color: transparent;
-	-webkit-user-select: none;
+body {
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
