--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -36,3 +36,9 @@
   font-style: italic;
   text-align: right;
 }
+
+@media only screen and (max-width: 370px){
+  .newsItem{
+    min-width: calc(100vw - 20px);
+  }
+}
