--- a/src/routes/settings/style.css
+++ b/src/routes/settings/style.css
@@ -1,8 +1,11 @@
 .settings {
 	position: relative;
 	padding: 65px 20px 20px 20px;
-	min-height: 100%;
-	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
+	height: 100%;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
 }
 
 .homeSelect{
@@ -21,15 +24,14 @@
 }
 
 .formActions{
-	margin: 10px 0;
+	margin: 10px 0 50px 0;
 }
 
 .footer{
-	position: absolute;
-	bottom: 20px;
-	width: calc(100% - 40px);
+	width: 100%;
   text-align: center;
 	font-size: 14px;
+	padding: 20px 0;
 }
 
 .footer a {
@@ -42,6 +44,5 @@
 	}
 	.formActions{
 		text-align: center;
-		margin-bottom: 40px;
 	}
 }
