--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,12 +3,13 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #f2f2f2;
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	color: #444;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background: #014473;
+	overflow: hidden;
 }
 
 * {
